# Egg

./: COPYRIGHT  cargo.toml
egg/: Cargo.toml
egg-cli/: Cargo.toml
egg-cli/src/: main.rs
egg/src/: atomic.rs  egg.rs  hash.rs  lib.rs  staging.rs  traits.rs  working.rs
egg/src/atomic/: file.rs  location.rs  mod.rs  operation.rs  recovery.rs  update.rs
egg/src/error/: base.rs  context.rs  kind.rs  mod.rs  underlying.rs
egg/src/snapshots/: data.rs  file.rs  index.rs  init.rs  mod.rs  state.rs  take.rs
egg/src/snapshots/state/: builder.rs  change.rs  init.rs  mod.rs
egg/src/snapshots/types/: builder.rs  file.rs  id.rs  mod.rs  snapshot.rs
egg/src/storage/: data.rs  local.rs  mod.rs  repository.rs  storable.rs  stream.rs
egg/tests/: test_snapshots.rs
eggproc/: Cargo.toml
server/: Cargo.toml
testspace/: Cargo.toml
testspace/src/: alphabet.rs  history.rs  lib.rs  modification.rs  testspace.rs  testspacefile.rs  testspacetextfile.rs
