[lib]

[package]
name = "egg"
version = "0.1.2"
edition = '2018'
authors = ["Luke <galactic.fungus@gmail.com>"]
publish=false
workspace = "../"

[dependencies]
byteorder = "1.3"
rand = "0.7"
blake2 = "0.8"
itertools = "0.9"
ahash = "0.4.5"
smallvec = "1.4.0"
[dev-dependencies]
testspace = { path = "../testspace" }